--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   },
   "homepage": "https://github.com/richardwellerson/desafio-cp-back#readme",
   "dependencies": {
+    "@mysql/xdevapi": "^8.0.21",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "joy": "^0.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
