Sequelize and database configuration

--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "global": "^4.4.0",
+    "pg": "^8.3.3",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
   },
   "scripts": {
