--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joy": "^0.1.1"
+    "joi": "^17.2.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
